# vivaldi-history-extractor

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
